// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should not render without examples 1`] = `null`;

exports[`it should render correctly 1`] = `
<section>
  <h2
    className="stncl__title"
  >
    Examples
  </h2>
  <select
    className="stncl__dropdown"
    onChange={[Function]}
    value="default"
  />
</section>
`;

exports[`it should show the value when the selection is changed 1`] = `
<section>
  <h2
    className="stncl__title"
  >
    Examples
  </h2>
  <select
    className="stncl__dropdown"
    onChange={[Function]}
    value="something else"
  >
    <option>
      something else
    </option>
  </select>
</section>
`;
